Bullet Continuous Collision Detection and Physics Library
Primary author and maintainer: Erwin Coumans

This ChangeLog is incomplete, for an up-to-date list of all fixed issues see http://bullet.googlecode.com
using http://tinyurl.com/yabmjjj

2012 September 10
	- Bullet 2.81 release preparation
	
2011 September 15
	- Bullet 2.79 release, revision 2433 (mainly a bugfix release)
	- Revert a change in 2.78 related to speculative contacts (it has undesired side effects)
	- Use HACD Hierachical Approximate Convex Decomposition (thanks to Khaled Mammou and Sujeon Kim)
	- Add Intel cmake-build support for OpenCL accelerated cloth/particle
	- add premake4 build system support to autogenerate visual studio project files that can be shipped (see msvc folder)
	- preliminary build support for Google NativeClient, using premake4 (see msvc folder)
			
	
2011 April 8
	- Bullet 2.78 release 2383
	- Added FractureDemo
	- Added Separatinx Axis Test and Polyhedral Clipping support (See InternalEdgeDemo)
	- Added speculative contacts as CCD response method (See CcdPhysicsDemo)
	- OpenCL and DirectCompute cloth as basic support for capsule collision

2010 September 7
	- autotools now uses CamelCase naming for libraries just like cmake:
	libbulletdynamics -> libBulletDynamics, libbulletmath -> libLinearMath

2010 July 21
	- Preparing for Bullet 2.77 release, around revision r2135
	- Added an OpenCL particle demo, running on NVidia, AMD and MiniCL
	Thanks to NVidia for the original particle demo from their OpenCL SDK
	- Added GPU deformable object solvers for OpenCL and DirectCompute, and a DirectX 11 cloth demo
	Thanks to AMD
	- Create a separate library for MiniCL, 
	MiniCL is a rudimentary OpenCL wrapper that allows to compile OpenCL kernels for multi-core CPU, using Win32 Threads or Posix
	- Moved vectormath into Bullet/src, and added a SSE implementation
	- Added a btParallelConstraintSolver, mainly for PlayStation 3 Cell SPUs (although it runs fine on CPU too)

2010 March 6